Bug 191763 - khtml/svg/SVGSVGElement.cpp not compiling on opensolaris (with patch)
Summary: khtml/svg/SVGSVGElement.cpp not compiling on opensolaris (with patch)
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2009-05-06 01:34 UTC by tropikhajma
Modified: 2009-12-30 02:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (1.01 KB, patch)
2009-05-06 01:35 UTC, tropikhajma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tropikhajma 2009-05-06 01:34:34 UTC
Version:           4.2.71 (using Devel)
Compiler:          Sun Studio 12 
OS:                Solaris
Installed from:    Compiled sources

compiling kdelibs on opensolaris with SunStudio 12 fails with:
...
pkgbuild: "/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/khtml/svg/SVGSVGElement.cpp", line 103: Error: Cannot return const char[1] from a function that should return const khtml::AtomicString&.
pkgbuild: "/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/khtml/svg/SVGSVGElement.cpp", line 117: Error: Cannot return const char[1] from a function that should return const khtml::AtomicString&.
pkgbuild: 2 Error(s) and 9 Warning(s) detected.
Comment 1 tropikhajma 2009-05-06 01:35:14 UTC
Created attachment 33387 [details]
patch
Comment 2 Pino Toscano 2009-05-06 01:36:56 UTC
@tropikhajma:
please, khtml bugs go to konqueror/html, not to kdelibs. thanks.
Comment 3 tropikhajma 2009-12-11 16:08:19 UTC
still valid
Comment 4 groot 2009-12-26 23:40:26 UTC
SVN commit 1066372 by adridg:

Make-it-compile. The assert(FALSE) means that this method
isn't supposed to be called anyway, and in debug it will
fall over then. Make it compile by returning something that
is actually a reference to an AtomicString. Needs to be this
complicated to avoid crashing if it *is* called outside of
debug mode (or would a crash be perferable?)

BUG: 191763



 M  +6 -2      SVGSVGElement.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1066372
Comment 5 Maksim Orlovich 2009-12-30 02:55:03 UTC
SVN commit 1067625 by orlovich:

Give a lot of method elements proper return types, hopefully 
fixing SunStudio12 build. While I am at it, properly provide 
XML attributes constants, and us them.

CCBUG: 191763
BUG: 191789
BUG: 191799
BUG: 191810


 M  +3 -0      misc/gennames.py  
 M  +2 -1      misc/htmlnames.cpp  
 M  +3 -0      misc/htmlnames.h  
 A             misc/xmlattrs.in  
 M  +8 -6      svg/SVGAltGlyphElement.cpp  
 M  +6 -6      svg/SVGAltGlyphElement.h  
 M  +2 -5      svg/SVGElement.cpp  
 M  +1 -2      svg/SVGGlyphElement.cpp  
 M  +1 -1      svg/SVGHKernElement.cpp  
 M  +7 -11     svg/SVGLangSpace.cpp  
 M  +13 -21    svg/SVGSVGElement.cpp  
 M  +9 -9      svg/SVGSVGElement.h  
 M  +14 -13    svg/SVGStyleElement.cpp  
 M  +7 -7      svg/SVGStyleElement.h  
 M  +11 -10    svg/SVGTextContentElement.cpp  
 M  +1 -1      svg/SVGURIReference.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1067625