Make-it-compile. The assert(FALSE) means that this method isn't supposed to be called anyway, and in debug it will fall over then. Make it compile by returning something that is actually a reference to an AtomicString. Needs to be this complicated to avoid crashing if it *is* called outside of debug mode (or would a crash be perferable?)

BUG: 191763


svn path=/trunk/KDE/kdelibs/; revision=1066372